--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "watchgpt",
+  "name": "recruiterapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^48.0.17",
-    "expo-status-bar": "~1.4.4",
-    "react": "^18.2.0",
-    "react-native": "^0.71.8",
+    "expo": "~47.0.12",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-vector-icons": "^9.2.0"
