adding tmdb major functions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recruiterapp",
+  "name": "watchgpt",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "axios": "^1.4.0",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "node-fetch": "^2.6.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-paper": "^5.2.0",
