--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "expo": "~47.0.12",
+    "expo-av": "^13.2.1",
     "expo-status-bar": "~1.4.2",
     "node-fetch": "^2.6.11",
     "react": "18.1.0",
