--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "expo": "~47.0.12",
     "expo-av": "^13.2.1",
     "expo-status-bar": "~1.4.2",
+    "icons": "^1.0.0",
     "node-fetch": "^2.6.11",
-    "react": "18.1.0",
+    "react": "^18.1.0",
     "react-native": "0.70.5",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
