--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "axios": "^1.4.0",
     "expo": "~47.0.12",
     "expo-av": "^13.2.1",
