--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
     "expo": "~47.0.12",
     "expo-av": "^13.2.1",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.22.1",
     "icons": "^1.0.0",
     "node-fetch": "^2.6.11",
     "react": "^18.1.0",
     "react-native": "0.70.5",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-vector-icons": "^9.2.0"
