--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
+    "dotenv": "^16.1.3",
     "expo": "~47.0.12",
     "expo-av": "^13.2.1",
     "expo-status-bar": "~1.4.2",
